Navbar collapse fix

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -70,12 +70,18 @@ h1 {
   color: #F1FAEE;
 }
 
+#navMenu{
+  text-align: center;
+}
+
 .navLink {
   font-size: 125%;
   padding: 0 19px;
   text-decoration: none;
   color: #F1FAEE;
 }
+
+
 
 
 /* End of navbar section */
@@ -197,7 +203,7 @@ h1 {
 /* Start of contact section */
 
 
-.contact {
+#contact {
   padding: 5% 5% 5% 6%;
   height: 400px;}
 
